--- a/eon.opam
+++ b/eon.opam
@@ -9,6 +9,10 @@ bug-reports: "https://github.com/mnxn/eon/issues"
 depends: [
   "dune" {>= "3.7"}
   "ocaml" {>= "4.14" & < "4.15"}
+  "sedlex" {>= "3.1"}
+  "menhir" {>= "20230415"}
+  "ppx_deriving"
+  "ppx_import"
   "odoc" {with-doc}
 ]
 build: [
