remove ppx_import dependency
ppx_import requires staged_pps, which causes compilation to fail on
Windows:

'.ppx' is not recognized as an internal or external command,
operable program or batch file.
File "src/eon_parser/parser__mock.ml.mock", line 1:
Error: Error while running external preprocessor

--- a/src/eon_parser/dune
+++ b/src/eon_parser/dune
@@ -3,7 +3,7 @@
  (name eon_parser)
  (libraries sedlex menhirLib)
  (preprocess
-  (staged_pps sedlex.ppx ppx_import ppx_deriving.show)))
+  (pps sedlex.ppx ppx_deriving.show)))
 
 (menhir
  (merge_into parser)
